<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_daily">

    <fragment
        android:id="@+id/navigation_daily"
        android:name="com.moonwinston.motivationaltodolist.ui.daily.DailyFragment"
        android:label="@string/title_daily"
        tools:layout="@layout/fragment_daily">
        <action
            android:id="@+id/action_daily_to_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_daily_to_add"
            app:destination="@id/navigation_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_monthly"
        android:name="com.moonwinston.motivationaltodolist.ui.monthly.MonthlyFragment"
        android:label="@string/title_monthly"
        tools:layout="@layout/fragment_monthly">
        <action
            android:id="@+id/action_monthly_to_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reward"
        android:name="com.moonwinston.motivationaltodolist.ui.rewards.RewardsFragment"
        android:label="@string/title_rewards"
        tools:layout="@layout/fragment_rewards">
        <action
            android:id="@+id/action_rewards_to_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_weekly"
        android:name="com.moonwinston.motivationaltodolist.ui.weekly.WeeklyFragment"
        android:label="@string/title_weekly"
        tools:layout="@layout/fragment_weekly">
        <action
            android:id="@+id/action_weekly_to_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_weekly_to_add"
            app:destination="@id/navigation_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.moonwinston.motivationaltodolist.ui.shared.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <dialog
        android:id="@+id/navigation_add"
        android:name="com.moonwinston.motivationaltodolist.ui.shared.AddDialogFragment"
        tools:layout="@layout/dialog_add" />

</navigation>