<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingsTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@string/title_settings"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_shape_rounded_rectangle_main_container"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitleTextView">

        <LinearLayout
            android:id="@+id/notifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_ripple_rectangle"
            android:minHeight="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notifyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoSizeTextType="uniform"
                android:gravity="start"
                android:minHeight="25dp"
                android:text="@string/label_notify"
                android:textColor="@color/main_text" />

            <TextView
                android:id="@+id/notify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="5dp"
                android:autoSizeTextType="uniform"
                android:gravity="start"
                android:minHeight="25dp"
                android:textColor="@color/sub_text"
                tools:text="off" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/themeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_ripple_rectangle"
            android:minHeight="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/themeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoSizeTextType="uniform"
                android:gravity="start"
                android:minHeight="25dp"
                android:text="@string/label_theme"
                android:textColor="@color/main_text" />

            <TextView
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="5dp"
                android:autoSizeTextType="uniform"
                android:gravity="start"
                android:minHeight="25dp"
                android:textColor="@color/sub_text"
                tools:text="Follow system" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/languageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_ripple_rectangle"
            android:minHeight="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/languageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoSizeTextType="uniform"
                android:gravity="start"
                android:minHeight="25dp"
                android:text="@string/label_language"
                android:textColor="@color/main_text" />

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.5dp"
                android:layout_marginBottom="5dp"
                android:autoSizeTextType="uniform"
                android:gravity="start"
                android:minHeight="25dp"
                android:textColor="@color/sub_text"
                tools:text="Follow system" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autoSizeTextType="uniform"
        android:minWidth="40dp"
        android:minHeight="25dp"
        android:textColor="@color/main_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="1.0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>